# dockform

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  README.md  index.html  killswitch.json  manifest.json  package-lock.json  package.json  plan.md
dictionaries/: deputies.json  holidays.json
docs/: portable-README.txt  release.md  template-authoring.md  доработки.md  правка-шаблонов-завтра.md
scripts/: build_manifest.py  fix_docxtpl_braces.py  make-minimal-docx.py  make_shortcuts.ps1  replace_placeholders.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  dictionaries.rs  drafts.rs  files.rs  holidays.rs  manifest.rs  mod.rs  network.rs  shortcuts.rs  templates.rs  window.rs
src/components/: CalculatorField.tsx  DecimalInput.tsx  DictionaryField.tsx  DynamicForm.tsx  NumberAmountWords.tsx  UpdaterPrompt.tsx
src/lib/: amount-to-words.test.ts  amount-to-words.ts  date-utils.test.ts  date-utils.ts  filename.test.ts  filename.ts  form-evaluator.ts  format-ru.test.ts  format-ru.ts  generator.ts  holidays.ts  number-to-words.test.ts  number-to-words.ts  russian-numerals.ts  tauri.ts  template-validator.test.ts  template-validator.ts  wizard-evaluator.test.ts  wizard-evaluator.ts  wizard-validator.test.ts  wizard-validator.ts
src/pages/: FormPage.tsx  InDevelopmentPage.tsx  ModeSelect.tsx  TemplatesList.tsx  WizardPage.tsx
src/types/: index.ts  wizard.ts
templates/documentation/: 44_tovar_smp_ktru.docx  44_tovar_smp_ktru.yaml  (+2 more)
(+42 files in other folders)
