[package]
name = "dockform"
version = "0.1.0"
description = "Dockform Portable — генератор юридических документов"
authors = ["dockform"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dockform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# rustls-tls — без OpenSSL, чтобы не тащить нативную либу при сборке portable .exe.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"

# .lnk-файлы создаются на лету при старте на Windows. Билдер MS-SHLLINK
# без зависимости от COM / WScript.Shell. Внутренне зовёт std::os::windows::ffi,
# поэтому только target-gated, иначе на macOS dev-сборка не пройдёт.
[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

